[package]
name = "keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.19.0"
thiserror = "1.0.37"
structopt = "0.3.26"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
dirs = "4.0.0"
