[package]
name = "keys"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keys"
path = "src/main.rs"

[[bin]]
name = "keys-cli"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.19.0"
thiserror = "1.0.37"
structopt = "0.3.26"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
dirs = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
ctrlc = "3.2.3"
hyper = { version = "0.14.22", features = ["full"], optional = true }
tarpc = { version = "0.29", features = ["tokio1"], optional = true }

[features]
default = ["http-server", "rpc"]
http-server = ["dep:hyper"]
rpc = ["dep:tarpc"]
